tests/snapshots/insta_test__unary_inc_dec-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Expr(
                            ConvExpr {
                                kind: Assign(
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                    ConvExpr {
                                        kind: Num(
                                            1,
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 16,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: DebugInfo {
                                    pos: Position {
                                        n_char: 8,
                                        n_line: 2,
                                    },
                                },
                            },
                        ),
                        Expr(
                            ConvExpr {
                                kind: Unary(
                                    Increment(
                                        1,
                                    ),
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 10,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: DebugInfo {
                                    pos: Position {
                                        n_char: 10,
                                        n_line: 3,
                                    },
                                },
                            },
                        ),
                        Expr(
                            ConvExpr {
                                kind: Unary(
                                    Decrement(
                                        1,
                                    ),
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 10,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: DebugInfo {
                                    pos: Position {
                                        n_char: 10,
                                        n_line: 4,
                                    },
                                },
                            },
                        ),
                    ],
                ),
                stack_size: 4,
            },
        ),
    ],
}
