tests/snapshots/insta_test__unary_inc_dec.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 12,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 13,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 12,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Eq,
        pos: DebugInfo {
            pos: Position {
                n_char: 14,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Num(
            1,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 16,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 17,
                n_line: 2,
            },
        },
    },
    Token {
        kind: PlusPlus,
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 10,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 11,
                n_line: 3,
            },
        },
    },
    Token {
        kind: MinusMinus,
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 10,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 11,
                n_line: 4,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Eof,
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 6,
            },
        },
    },
]
