tests/snapshots/insta_test__void_type-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Void,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 1,
                                                    direct_declarator: Ident(
                                                        "p",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 1,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Int,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 4,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: LVar(
                                                    "p",
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "not impl name.c",
                                                        src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                                    },
                                                    pos: Position {
                                                        n_char: 8,
                                                        n_line: 3,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: Addr(
                                                    Expr {
                                                        kind: LVar(
                                                            "a",
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: FileInfo {
                                                                file_name: "not impl name.c",
                                                                src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                                            },
                                                            pos: Position {
                                                                n_char: 13,
                                                                n_line: 3,
                                                            },
                                                        },
                                                    },
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "not impl name.c",
                                                        src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                                    },
                                                    pos: Position {
                                                        n_char: 12,
                                                        n_line: 3,
                                                    },
                                                },
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                                            },
                                            pos: Position {
                                                n_char: 10,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "int main() {\n        void *p;\n        int ****a;\n        p = &a;\n    }",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
    ],
}
